@@ -493,25 +493,12 @@ int R_SaveAsTIFF(void  *d, int width, int height,
     TIFFSetField(out, TIFFTAG_ORIENTATION, ORIENTATION_TOPLEFT);
     TIFFSetField(out, TIFFTAG_PLANARCONFIG, PLANARCONFIG_CONTIG);
     TIFFSetField(out, TIFFTAG_PHOTOMETRIC, PHOTOMETRIC_RGB);
-#if 0
-    /* Possible compression values
-       COMPRESSION_NONE = 1;
-       COMPRESSION_CCITTRLE = 2;
-       COMPRESSION_CCITTFAX3 = COMPRESSION_CCITT_T4 = 3;
-       COMPRESSION_CCITTFAX4 = COMPRESSION_CCITT_T6 = 4;
-       COMPRESSION_LZW = 5;
-       COMPRESSION_JPEG = 7;
-       COMPRESSION_DEFLATE = 32946;
-       COMPRESSION_ADOBE_DEFLATE = 8;
-    */
-    TIFFSetField(out, TIFFTAG_COMPRESSION, COMPRESSION_NONE);
-#endif
     if(compression > 1) {
-	if (compression > 10) {
+	if (compression == 15 || compression == 18) {
 	    TIFFSetField(out, TIFFTAG_COMPRESSION, compression - 10);
 	    TIFFSetField(out, TIFFTAG_PREDICTOR, 2);
 	} else 
-	    TIFFSetField(out, TIFFTAG_COMPRESSION, compression);
+	    res = TIFFSetField(out, TIFFTAG_COMPRESSION, compression);
     }
 
     if (res > 0) {
@@ -535,7 +522,8 @@ int R_SaveAsTIFF(void  *d, int width, int height,
 	    *pscanline++ = GETBLUE(col) ;
 	    if(have_alpha) *pscanline++ = GETALPHA(col) ;
 	}
-	TIFFWriteScanline(out, buf, i, 0);
+	int res = TIFFWriteScanline(out, buf, i, 0);
+	if (res == -1) break;
     }
     TIFFClose(out);
     _TIFFfree(buf);
